--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Nav.no - Redaksjonelle innstillinger</title>
+        <script>
+            window.data = {};
+        </script>
     </head>
     <body>
         <div id="root"></div>
